--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.plcoding.doodlekong"
+        applicationId "com.realityexpander.guessasketch"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
