--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.plcoding.doodlekong">
+    package="com.realityexpander.guessasketch">
 
     <application
+        android:name=".DrawingApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Doodlekong">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.GuessASketch">
+        <activity android:name="com.realityexpander.guessasketch.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
